Updating files and adding API script

--- a/scripts/codeAster-13.6
+++ b/scripts/codeAster-13.6
@@ -1,5 +1,14 @@
 #!/bin/bash
 
+###############################################################################
+#
+#   Script developped in 2019 by
+#   CFD FEA SERVICE SRL - via Borgo Grande 19, 37044 Cologna Veneta VR
+#
+#   License: GPLv3
+#
+###############################################################################
+
 cp export.org export
 
 mkdir base-stage1
